--- a/3D.html
+++ b/3D.html
@@ -51,7 +51,8 @@
             <img src="images/3D/logo/2.png" alt="">
             <img src="images/3D/logo/3.png" alt="">
             <p>
-
+               Het 3D logo is gemodeleerd in C4D, met de text tool en vector tools om de 2 letters samen te brengen.
+               Daarna heb ik deze geexporteerd en gerendered in Blender, waar ik ook de zee in de achtergrond heb gegenereerd.
             </p>
          </div>
          <div class="project_container">
@@ -91,7 +92,8 @@
             <img src="images/3D/camera/5.png" alt="">
             <img src="images/3D/camera/6.png" alt="">
             <p>
-
+               De camera is gemodeleerd in Fusion 360 (CAD software gelijk aan solidworks of autoCAD), nadat ik het STEP bestand in C4D had geimporteerd begon ik met de belichting.
+               Hierna heb ik de bureau scene gemodeleerd in C4D zelf. Met Arnold heb ik de materialen gemaakt en de belichting verbeterd en verfijnd.
             </p>
          </div>
       </main>
