--- a/3D.html
+++ b/3D.html
@@ -1,30 +1,31 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en" dir="ltr">
-   <head>
-      <meta charset="utf-8">
-      <title>Portfolio 64985</title>
-      <link rel="stylesheet" href="index.css">
-      <link href="https://fonts.googleapis.com/css?family=Istok+Web|Old+Standard+TT|Playfair+Display" rel="stylesheet">
-   </head>
-   <style media="screen">
-      body{
-         display: grid;
-         grid-template-columns: 1fr auto 1fr;
-         grid-template-rows: 300px auto;
-      }
-      header{
-         background: url(images/3D/camera/1.png);
-         background-position: center;
-         background-size: cover;
-      }
-   </style>
-   <body>
-      <a id="back_button" href="index.html">◄</a>
-      <header>
-         <p>3D design</p>
-      </header>
-      <main>
-         <div class="project_container">
+<head>
+    <meta charset="utf-8">
+    <title>Portfolio 64985</title>
+    <link rel="stylesheet" href="index.css">
+    <link href="https://fonts.googleapis.com/css?family=Istok+Web|Old+Standard+TT|Playfair+Display" rel="stylesheet">
+</head>
+<style media="screen">
+    body {
+        display: grid;
+        grid-template-columns: 1fr auto 1fr;
+        grid-template-rows: 300px auto;
+    }
+
+    header {
+        background: url(images/3D/camera/1.png);
+        background-position: center;
+        background-size: cover;
+    }
+</style>
+<body>
+    <a id="back_button" href="index.html">◄</a>
+    <header>
+        <p>3D design</p>
+    </header>
+    <main>
+        <div class="project_container">
             <h1>Forest</h1>
             <img src="images/3D/forest/1.png" alt="">
             <img src="images/3D/forest/2.png" alt="">
@@ -33,43 +34,44 @@
             <img src="images/3D/forest/5.png" alt="">
             <img src="images/3D/forest/6.png" alt="">
             <img src="images/3D/forest/7.png" alt="">
-            <p>De bomen zijn gemaakt met vectors and lofts en daarna verspreid
-               met een cloner object en willekeurig gemaakt met een random effector,
-               de grond is een simpele cirkel en de lucht is een physical sky object.
-               Daarnaast hebben alle materialen een noise bump texture
-               en de kruin van de bomen hebben een subsurface scattering effect.
-               De vogel is gemaakt via Poly Modeling,
-               een techniek die direct het object aanpast, maar waarmee je wel niet makkelijk
-               terug kunt gaan naar vorige versies van dit object.
-               Het grass is gemaakt met een hair simulation,
-               met de bijkomende material die standaard wordt gebruikt bij haar in C4D R20.
+            <p>
+                De bomen zijn gemaakt met vectors and lofts en daarna verspreid
+                met een cloner object en willekeurig gemaakt met een random effector,
+                de grond is een simpele cirkel en de lucht is een physical sky object.
+                Daarnaast hebben alle materialen een noise bump texture
+                en de kruin van de bomen hebben een subsurface scattering effect.
+                De vogel is gemaakt via Poly Modeling,
+                een techniek die direct het object aanpast, maar waarmee je wel niet makkelijk
+                terug kunt gaan naar vorige versies van dit object.
+                Het grass is gemaakt met een hair simulation,
+                met de bijkomende material die standaard wordt gebruikt bij haar in C4D R20.
             </p>
-         </div>
-         <div class="project_container">
+        </div>
+        <div class="project_container">
             <h1>Logo</h1>
             <img src="images/3D/logo/1.png" alt="">
             <img src="images/3D/logo/2.png" alt="">
             <img src="images/3D/logo/3.png" alt="">
             <p>
-               Het 3D logo is gemodeleerd in C4D, met de text tool en vector tools om de 2 letters samen te brengen.
-               Daarna heb ik deze geexporteerd en gerendered in Blender, waar ik ook de zee in de achtergrond heb gegenereerd.
+                Het 3D logo is gemodeleerd in C4D, met de text tool en vector tools om de 2 letters samen te brengen.
+                Daarna heb ik deze geexporteerd en gerendered in Blender, waar ik ook de zee in de achtergrond heb gegenereerd.
             </p>
-         </div>
-         <div class="project_container">
+        </div>
+        <div class="project_container">
             <h1>Key</h1>
             <img src="images/3D/key/1.png" alt="">
             <img src="images/3D/key/2.png" alt="">
             <img src="images/3D/key/3.png" alt="">
             <img src="images/3D/key/4.png" alt="">
             <p>
-               Ik heb deze sleutel gebaseerd op mijn eigen sleutel.
-               Het hele model is gemaakt uit vectors, die samen met extrude modifiers en boolean
-               modifiers dit object maken. Daarna heb ik deze ook nog in een volume builder en
-               mesher gestoken aangezien de boolean modifier niet erg consistent was,
-               en een bevel modifier wou niet deftig werken met de bestaande topology.
+                Ik heb deze sleutel gebaseerd op mijn eigen sleutel.
+                Het hele model is gemaakt uit vectors, die samen met extrude modifiers en boolean
+                modifiers dit object maken. Daarna heb ik deze ook nog in een volume builder en
+                mesher gestoken aangezien de boolean modifier niet erg consistent was,
+                en een bevel modifier wou niet deftig werken met de bestaande topology.
             </p>
-         </div>
-         <div class="project_container">
+        </div>
+        <div class="project_container">
             <h1>Tree</h1>
             <img src="images/3D/tree/1.png" alt="">
             <img src="images/3D/tree/2.png" alt="">
@@ -78,12 +80,12 @@
             <img src="images/3D/tree/5.png" alt="">
             <img src="images/3D/tree/6.png" alt="">
             <p>
-               Deze boom is simpel gemaakt met poly modeling; vooral matrix extrudes en
-               wat soft selection aanpassingen.
-               Daarna heb ik deze scene gerendered met Arnold render engine van Autodesk.
+                Deze boom is simpel gemaakt met poly modeling; vooral matrix extrudes en
+                wat soft selection aanpassingen.
+                Daarna heb ik deze scene gerendered met Arnold render engine van Autodesk.
             </p>
-         </div>
-         <div class="project_container">
+        </div>
+        <div class="project_container">
             <h1>Camera</h1>
             <img src="images/3D/camera/1.png" alt="">
             <img src="images/3D/camera/2.png" alt="">
@@ -92,10 +94,10 @@
             <img src="images/3D/camera/5.png" alt="">
             <img src="images/3D/camera/6.png" alt="">
             <p>
-               De camera is gemodeleerd in Fusion 360 (CAD software gelijk aan solidworks of autoCAD), nadat ik het STEP bestand in C4D had geimporteerd begon ik met de belichting.
-               Hierna heb ik de bureau scene gemodeleerd in C4D zelf. Met Arnold heb ik de materialen gemaakt en de belichting verbeterd en verfijnd.
+                De camera is gemodeleerd in Fusion 360 (CAD software gelijk aan solidworks of autoCAD), nadat ik het STEP bestand in C4D had geimporteerd begon ik met de belichting.
+                Hierna heb ik de bureau scene gemodeleerd in C4D zelf. Met Arnold heb ik de materialen gemaakt en de belichting verbeterd en verfijnd.
             </p>
-         </div>
-      </main>
-   </body>
+        </div>
+    </main>
+</body>
 </html>
