--- a/3DA.html
+++ b/3DA.html
@@ -7,13 +7,6 @@
     <link href="https://fonts.googleapis.com/css?family=Istok+Web|Old+Standard+TT|Playfair+Display" rel="stylesheet">
 </head>
 <style media="screen">
-    body {
-        display: grid;
-        grid-template-columns: 1fr auto 1fr;
-        grid-template-rows: 300px auto;
-        grid-template-areas: ". header ." ". main .";
-    }
-
     header {
         background: url(images/3D/camera/1.png);
         background-position: center;
@@ -28,7 +21,7 @@
     <main>
         <div class="project_container">
             <h1>Cursed Noodle</h1>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/nEYEmlmskrU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="605px" height="340px" src="https://www.youtube.com/embed/nEYEmlmskrU" frameborder="0" allow="picture-in-picture" allowfullscreen></iframe>
         </div>
     </main>
 </body>
