--- a/3D.html
+++ b/3D.html
@@ -8,7 +8,7 @@
 </head>
 <style media="screen">
     header {
-        background: url(images/3D/camera/1.png);
+        background: url(images/3D/camera/1.jpg);
         background-position: center;
         background-size: cover;
     }
@@ -21,13 +21,13 @@
     <main>
         <div class="project_container">
             <h1>Forest</h1>
-            <img src="images/3D/forest/1.png" alt="">
-            <img src="images/3D/forest/2.png" alt="">
-            <img src="images/3D/forest/3.png" alt="">
-            <img src="images/3D/forest/4.png" alt="">
-            <img src="images/3D/forest/5.png" alt="">
-            <img src="images/3D/forest/6.png" alt="">
-            <img src="images/3D/forest/7.png" alt="">
+            <img src="images/3D/forest/1.jpg" alt="">
+            <img src="images/3D/forest/2.jpg" alt="">
+            <img src="images/3D/forest/3.jpg" alt="">
+            <img src="images/3D/forest/4.jpg" alt="">
+            <img src="images/3D/forest/5.jpg" alt="">
+            <img src="images/3D/forest/6.jpg" alt="">
+            <img src="images/3D/forest/7.jpg" alt="">
             <p>
                 De bomen zijn gemaakt met vectors and lofts en daarna verspreid
                 met een cloner object en willekeurig gemaakt met een random effector,
@@ -43,9 +43,9 @@
         </div>
         <div class="project_container">
             <h1>Logo</h1>
-            <img src="images/3D/logo/1.png" alt="">
-            <img src="images/3D/logo/2.png" alt="">
-            <img src="images/3D/logo/3.png" alt="">
+            <img src="images/3D/logo/1.jpg" alt="">
+            <img src="images/3D/logo/2.jpg" alt="">
+            <img src="images/3D/logo/3.jpg" alt="">
             <p>
                 Het 3D logo is gemodeleerd in C4D, met de text tool en vector tools om de 2 letters samen te brengen.
                 Daarna heb ik deze geexporteerd en gerendered in Blender, waar ik ook de zee in de achtergrond heb gegenereerd.
@@ -53,10 +53,10 @@
         </div>
         <div class="project_container">
             <h1>Key</h1>
-            <img src="images/3D/key/1.png" alt="">
-            <img src="images/3D/key/2.png" alt="">
-            <img src="images/3D/key/3.png" alt="">
-            <img src="images/3D/key/4.png" alt="">
+            <img src="images/3D/key/1.jpg" alt="">
+            <img src="images/3D/key/2.jpg" alt="">
+            <img src="images/3D/key/3.jpg" alt="">
+            <img src="images/3D/key/4.jpg" alt="">
             <p>
                 Ik heb deze sleutel gebaseerd op mijn eigen sleutel.
                 Het hele model is gemaakt uit vectors, die samen met extrude modifiers en boolean
@@ -67,12 +67,12 @@
         </div>
         <div class="project_container">
             <h1>Tree</h1>
-            <img src="images/3D/tree/1.png" alt="">
-            <img src="images/3D/tree/2.png" alt="">
-            <img src="images/3D/tree/3.png" alt="">
-            <img src="images/3D/tree/4.png" alt="">
-            <img src="images/3D/tree/5.png" alt="">
-            <img src="images/3D/tree/6.png" alt="">
+            <img src="images/3D/tree/1.jpg" alt="">
+            <img src="images/3D/tree/2.jpg" alt="">
+            <img src="images/3D/tree/3.jpg" alt="">
+            <img src="images/3D/tree/4.jpg" alt="">
+            <img src="images/3D/tree/5.jpg" alt="">
+            <img src="images/3D/tree/6.jpg" alt="">
             <p>
                 Deze boom is simpel gemaakt met poly modeling; vooral matrix extrudes en
                 wat soft selection aanpassingen.
@@ -81,12 +81,12 @@
         </div>
         <div class="project_container">
             <h1>Camera</h1>
-            <img src="images/3D/camera/1.png" alt="">
-            <img src="images/3D/camera/2.png" alt="">
-            <img src="images/3D/camera/3.png" alt="">
-            <img src="images/3D/camera/4.png" alt="">
-            <img src="images/3D/camera/5.png" alt="">
-            <img src="images/3D/camera/6.png" alt="">
+            <img src="images/3D/camera/1.jpg" alt="">
+            <img src="images/3D/camera/2.jpg" alt="">
+            <img src="images/3D/camera/3.jpg" alt="">
+            <img src="images/3D/camera/4.jpg" alt="">
+            <img src="images/3D/camera/5.jpg" alt="">
+            <img src="images/3D/camera/6.jpg" alt="">
             <p>
                 De camera is gemodeleerd in Fusion 360 (CAD software gelijk aan solidworks of autoCAD), nadat ik het STEP bestand in C4D had geimporteerd begon ik met de belichting.
                 Hierna heb ik de bureau scene gemodeleerd in C4D zelf. Met Arnold heb ik de materialen gemaakt en de belichting verbeterd en verfijnd.
