--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </style>
 <body>
     <div class="profile_container">
-        <img style="width: 200px; margin: auto; border-radius: 50px;" src="images/pfp.png" alt="cropped image of lens">
+        <img style="width: 200px; margin: auto; border-radius: 50px;" src="images/pfp.jpg" alt="cropped image of lens">
         <h3>Julien Peeters</h3>
         <h5>64985</h5>
     </div>
