--- a/3DA.html
+++ b/3DA.html
@@ -8,7 +8,7 @@
 </head>
 <style media="screen">
     header {
-        background: url(images/3D/camera/1.png);
+        background: url(images/3D/camera/1.jpg);
         background-position: center;
         background-size: cover;
     }
