--- a/3DA.html
+++ b/3DA.html
@@ -21,7 +21,13 @@
     <main>
         <div class="project_container">
             <h1>Cursed Noodle</h1>
-            <iframe width="605px" height="340px" src="https://www.youtube.com/embed/nEYEmlmskrU" frameborder="0" allow="picture-in-picture" allowfullscreen></iframe>
+            <iframe width="605" height="340" src="https://www.youtube.com/embed/nEYEmlmskrU" frameborder="0" allow="picture-in-picture" allowfullscreen></iframe>
+        </div>
+    </main>
+    <main>
+        <div class="project_container">
+            <h1>Blender</h1>
+            <iframe width="605" height="340" src="https://www.youtube.com/embed/MlChCWaJmVI" frameborder="0" allow="picture-in-picture" allowfullscreen></iframe>
         </div>
     </main>
 </body>
