--- a/3DA.html
+++ b/3DA.html
@@ -26,6 +26,7 @@
         <div class="project_container">
             <h1>Blender</h1>
             <iframe width="605" height="340" src="https://www.youtube.com/embed/MlChCWaJmVI" frameborder="0" allow="picture-in-picture" allowfullscreen></iframe>
+            <img src="images/3Danim/blenderFullscreen.png"/>
         </div>
     </main>
 </body>
