--- a/3DA.html
+++ b/3DA.html
@@ -22,7 +22,7 @@
         <div class="project_container">
             <h1>Cursed Noodle</h1>
             <iframe width="605" height="340" src="https://www.youtube.com/embed/nEYEmlmskrU" frameborder="0" allow="picture-in-picture" allowfullscreen></iframe>
-            <img src="images/3Danim/noodleFullscreen.png" />
+            <div><img src="images/3Danim/noodleFullscreen.png" /><p></p></div>
             <img src="images/3Danim/noodleSmall.png" />
         </div>
         <div class="project_container">
