--- a/3D.html
+++ b/3D.html
@@ -28,7 +28,7 @@
             <img src="images/3D/forest/5.jpg" alt="">
             <img src="images/3D/forest/6.jpg" alt="">
             <img src="images/3D/forest/7.jpg" alt="">
-            <p>
+            <p class="text">
                 De bomen zijn gemaakt met vectors and lofts en daarna verspreid
                 met een cloner object en willekeurig gemaakt met een random effector,
                 de grond is een simpele cirkel en de lucht is een physical sky object.
@@ -46,7 +46,7 @@
             <img src="images/3D/logo/1.jpg" alt="">
             <img src="images/3D/logo/2.jpg" alt="">
             <img src="images/3D/logo/3.jpg" alt="">
-            <p>
+            <p class="text">
                 Het 3D logo is gemodeleerd in C4D, met de text tool en vector tools om de 2 letters samen te brengen.
                 Daarna heb ik deze geexporteerd en gerendered in Blender, waar ik ook de zee in de achtergrond heb gegenereerd.
             </p>
@@ -57,7 +57,7 @@
             <img src="images/3D/key/2.jpg" alt="">
             <img src="images/3D/key/3.jpg" alt="">
             <img src="images/3D/key/4.jpg" alt="">
-            <p>
+            <p class="text">
                 Ik heb deze sleutel gebaseerd op mijn eigen sleutel.
                 Het hele model is gemaakt uit vectors, die samen met extrude modifiers en boolean
                 modifiers dit object maken. Daarna heb ik deze ook nog in een volume builder en
@@ -73,7 +73,7 @@
             <img src="images/3D/tree/4.jpg" alt="">
             <img src="images/3D/tree/5.jpg" alt="">
             <img src="images/3D/tree/6.jpg" alt="">
-            <p>
+            <p class="text">
                 Deze boom is simpel gemaakt met poly modeling; vooral matrix extrudes en
                 wat soft selection aanpassingen.
                 Daarna heb ik deze scene gerendered met Arnold render engine van Autodesk.
@@ -87,7 +87,7 @@
             <img src="images/3D/camera/4.jpg" alt="">
             <img src="images/3D/camera/5.jpg" alt="">
             <img src="images/3D/camera/6.jpg" alt="">
-            <p>
+            <p class="text">
                 De camera is gemodeleerd in Fusion 360 (CAD software gelijk aan solidworks of autoCAD), nadat ik het STEP bestand in C4D had geimporteerd begon ik met de belichting.
                 Hierna heb ik de bureau scene gemodeleerd in C4D zelf. Met Arnold heb ik de materialen gemaakt en de belichting verbeterd en verfijnd.
             </p>
