--- a/3DA.html
+++ b/3DA.html
@@ -22,15 +22,15 @@
         <div class="project_container">
             <h1>Cursed Noodle</h1>
             <iframe width="600" height="340" src="https://www.youtube.com/embed/nEYEmlmskrU" frameborder="0" allow="picture-in-picture" allowfullscreen></iframe>
-            <div><img src="images/3Danim/noodleFullscreen.png" /><p>hjfdakhfdasjhjkdahjkhasdjkhjklfdhjlkhjkalshjkdhjkfhjklashlkdhjklfhjklasjkhldfhjklhajksldhkjlfhjkashjkldfadshjklfhjkl</p></div>
-            <img src="images/3Danim/noodleSmall.png" />
+            <div><img src="images/3Danim/noodleFullscreen.png" /><p></p></div>
+            <img src="images/3Danim/noodleSmall.png"/>
         </div>
         <div class="project_container">
             <h1>Blender</h1>
             <iframe width="600" height="340" src="https://www.youtube.com/embed/MlChCWaJmVI" frameborder="0" allow="picture-in-picture" allowfullscreen></iframe>
             <img src="images/3Danim/blenderFullscreen.png"/>
             <img src="images/3Danim/blenderSmall.png"/>
-            <p></p>
+            <p style="column-width: 1/3;"></p>
         </div>
     </main>
 </body>
