--- a/3DA.html
+++ b/3DA.html
@@ -30,7 +30,7 @@
             <iframe width="600" height="340" src="https://www.youtube.com/embed/MlChCWaJmVI" frameborder="0" allow="picture-in-picture" allowfullscreen></iframe>
             <img src="images/3Danim/blenderFullscreen.png"/>
             <img src="images/3Danim/blenderSmall.png"/>
-            <p style="column-width: 1/3;"></p>
+            <p style="grid-column: 1/3;"></p>
         </div>
     </main>
 </body>
