--- a/3DA.html
+++ b/3DA.html
@@ -21,13 +21,13 @@
     <main>
         <div class="project_container">
             <h1>Cursed Noodle</h1>
-            <iframe width="600" height="340" src="https://www.youtube.com/embed/nEYEmlmskrU" frameborder="0" allow="picture-in-picture" allowfullscreen></iframe>
-            <div><img src="images/3Danim/noodleFullscreen.png" /><p></p></div>
+            <iframe width="605" height="340" src="https://www.youtube.com/embed/nEYEmlmskrU" frameborder="0" allow="picture-in-picture" allowfullscreen></iframe>
+            <div><img src="images/3Danim/noodleFullscreen.png" /><p>Beginnend met het maken van de omgeving: achtergrond, HDRI in sky object en de glazen kom, knop etc. Begon ik met de noodle te maken. Ik begon eerst met wat een van de gegeven video's uitgelegd had (waarvan ik ook best wat heb geleerd over het fracture object en emitters.) maar zag dat de bollen die gecreeert worden soms vast zatten in de lucht. Dus ben ik overgeschakelt naar een op voorand gemaakte noodle via een array object.</p></div>
             <img src="images/3Danim/noodleSmall.png"/>
         </div>
         <div class="project_container">
             <h1>Blender</h1>
-            <iframe width="600" height="340" src="https://www.youtube.com/embed/MlChCWaJmVI" frameborder="0" allow="picture-in-picture" allowfullscreen></iframe>
+            <iframe width="605" height="340" src="https://www.youtube.com/embed/MlChCWaJmVI" frameborder="0" allow="picture-in-picture" allowfullscreen></iframe>
             <img src="images/3Danim/blenderFullscreen.png"/>
             <img src="images/3Danim/blenderSmall.png"/>
             <p style="grid-column: 1/3;"></p>
