--- a/3DA.html
+++ b/3DA.html
@@ -22,7 +22,7 @@
         <div class="project_container">
             <h1>Cursed Noodle</h1>
             <iframe width="605" height="340" src="https://www.youtube.com/embed/nEYEmlmskrU" frameborder="0" allow="picture-in-picture" allowfullscreen></iframe>
-            <div><img src="images/3Danim/noodleFullscreen.png" /><p>Beginnend met het maken van de omgeving: achtergrond, HDRI in sky object en de glazen kom, knop etc. Begon ik met de noodle te maken. Ik begon eerst met wat een van de gegeven video's uitgelegd had (waarvan ik ook best wat heb geleerd over het fracture object en emitters.) maar zag dat de bollen die gecreeert worden soms vast zatten in de lucht. Dus ben ik overgeschakelt naar een op voorand gemaakte noodle via een array object.</p></div>
+            <div><img src="images/3Danim/noodleFullscreen.png" /><p style="text-align: right;">Beginnend met het maken van de omgeving: achtergrond, HDRI in sky object en de glazen kom, knop etc. Begon ik met de noodle te maken. Ik begon eerst met wat een van de gegeven video's uitgelegd had (waarvan ik ook best wat heb geleerd over het fracture object en emitters.) maar zag dat de bollen die gecreëerd werden soms vast zatten in de lucht. Dus ben ik overgeschakelt naar een op voorand gemaakte noodle via een array object.<br /><br />Daarna begon ik met de hand, deze heb ik van MakeHuman gehaald (geweldig programma voor menselijke lichamen.) Met de bone tool maakte ik het skelet van de hand, om dan het object te "skinnen" aan het skelet. Deze kon ik dan makkelijk animeren voor de knop in te drukken.</p></div>
             <img src="images/3Danim/noodleSmall.png"/>
         </div>
         <div class="project_container">
@@ -30,7 +30,9 @@
             <iframe width="605" height="340" src="https://www.youtube.com/embed/MlChCWaJmVI" frameborder="0" allow="picture-in-picture" allowfullscreen></iframe>
             <img src="images/3Danim/blenderFullscreen.png"/>
             <img src="images/3Danim/blenderSmall.png"/>
-            <p style="grid-column: 1/3;"></p>
+            <img style="grid-column: 1/3; width: 100%;" src="images/3Danim/blenderRAWvsACES.png" />
+            <p class="text">Links is RAW EXR bestand, rechts is aangepast via ACES in Resolve.</p>
+            <p class="text">De blender heb ik gemaakt met standaard objecten en vector object in een revolve object geplaatst. Daarna heb ik de cubus geplaatst in een fracture object, en een paar rigidbody instellingen geanimeerd zodat de cubus een deftig afbrekend effect kreeg tijdens zijn simulatie in de blender. Renderen was gedaan in Prorender, opgeslagen als EXR om dan in Davinci resolve door het ACES colour pipeline gebracht te worden.</p>
         </div>
     </main>
 </body>
