--- a/3DA.html
+++ b/3DA.html
@@ -31,7 +31,7 @@
             <img src="images/3Danim/blenderFullscreen.png"/>
             <img src="images/3Danim/blenderSmall.png"/>
             <img style="grid-column: 1/3; width: 100%;" src="images/3Danim/blenderRAWvsACES.png" />
-            <p class="text">Links is RAW EXR bestand, rechts is aangepast via ACES in Resolve.</p>
+            <p class="text" style="font-size: 8pt;">Links is RAW EXR bestand, rechts is aangepast via ACES in Resolve.</p>
             <p class="text">De blender heb ik gemaakt met standaard objecten en vector object in een revolve object geplaatst. Daarna heb ik de cubus geplaatst in een fracture object, en een paar rigidbody instellingen geanimeerd zodat de cubus een deftig afbrekend effect kreeg tijdens zijn simulatie in de blender. Renderen was gedaan in Prorender, opgeslagen als EXR om dan in Davinci resolve door het ACES colour pipeline gebracht te worden.</p>
         </div>
     </main>
